# kuo

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  stale.yml
examples/: break_continue.kuo  control_flow.kuo  fibonacci.kuo  functions.kuo  hello.kuo  postfix_expr.kuo  string_utils.kuo
include/: ast.h  codegen.h  lexer.h  parser.h  token.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
src/core/: math.kuo
